--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="notSupportedWrap">
 			<h2 id="notSupportedTitle">This content requires JavaScript</h2>
 			<p class="notSupportedMessage">JavaScript appears to be disabled. Please enable it to view this content.</p>
-			<p class="notSupportedMessage">This content was built with Construct. <a href="https://www.construct.net/en">Build games</a></p>
+			<p class="notSupportedMessage">This game was created with Construct - a <a href="https://www.construct.net/en">game creator</a>.</p>
 		</div>
 	</noscript>
 	<script src="scripts/supportcheck.js"></script>
